# sordino

./: .gitignore  CHANGELOG.md  KONTEXT.md  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  sordino.spec
.github/workflows/: ci.yml  release.yml
examples/: comet_integration_test.py  discover_server.py  hello_ui.py  home_menu_demo.py  live_player_control.py  server_connect_demo.py
jive/: __init__.py  applet.py  applet_manager.py  applet_meta.py  debug_bridge.py  iconbar.py  input_to_action_map.py  jive_main.py  main.py  system.py
jive/applets/: __init__.py
jive/applets/BlankScreenSaver/: BlankScreenSaverApplet.py  BlankScreenSaverMeta.py  __init__.py
jive/applets/ChooseMusicSource/: ChooseMusicSourceApplet.py  ChooseMusicSourceMeta.py  __init__.py
jive/applets/Clock/: ClockApplet.py  ClockMeta.py  __init__.py
jive/applets/CustomizeHomeMenu/: CustomizeHomeMenuApplet.py  CustomizeHomeMenuMeta.py  __init__.py  strings.txt
jive/applets/DesktopJive/: DesktopJiveMeta.py  __init__.py
jive/applets/HDGridSkin/: HDGridSkinApplet.py  HDGridSkinMeta.py  __init__.py
jive/applets/HDSkin/: HDSkinApplet.py  HDSkinMeta.py  __init__.py
jive/applets/HttpAuth/: HttpAuthApplet.py  HttpAuthMeta.py  __init__.py  strings.txt
jive/applets/ImageViewer/: ImageSource.py  ImageSourceCard.py  ImageSourceFlickr.py  ImageSourceHttp.py  ImageSourceLocalStorage.py  ImageSourceServer.py  ImageSourceUSB.py  ImageViewerApplet.py  ImageViewerMeta.py  __init__.py
jive/applets/JogglerSkin/: JogglerSkinApplet.py  JogglerSkinMeta.py  __init__.py
jive/applets/LineIn/: LineInApplet.py  LineInMeta.py  __init__.py  strings.txt
jive/applets/LogSettings/: LogSettingsApplet.py  LogSettingsMeta.py  __init__.py
jive/applets/NowPlaying/: NowPlayingApplet.py  NowPlayingMeta.py  __init__.py
jive/applets/PiGridSkin/: PiGridSkinApplet.py  PiGridSkinMeta.py  __init__.py  strings.txt
jive/applets/QVGA240squareSkin/: QVGA240squareSkinApplet.py  QVGA240squareSkinMeta.py  __init__.py  strings.txt
jive/applets/QVGAbaseSkin/: QVGAbaseSkinApplet.py  QVGAbaseSkinMeta.py  __init__.py
jive/applets/QVGAlandscapeSkin/: QVGAlandscapeSkinApplet.py  QVGAlandscapeSkinMeta.py  __init__.py
jive/applets/QVGAportraitSkin/: QVGAportraitSkinApplet.py  QVGAportraitSkinMeta.py  __init__.py
jive/applets/Quit/: QuitMeta.py  __init__.py
jive/applets/ScreenSavers/: ScreenSaversApplet.py  ScreenSaversMeta.py  __init__.py
jive/applets/Screenshot/: ScreenshotApplet.py  ScreenshotMeta.py  __init__.py
jive/applets/SelectPlayer/: SelectPlayerApplet.py  SelectPlayerMeta.py  __init__.py
jive/applets/SelectSkin/: SelectSkinApplet.py  SelectSkinMeta.py  __init__.py
jive/applets/SetupAppletInstaller/: SetupAppletInstallerApplet.py  SetupAppletInstallerMeta.py  __init__.py
jive/applets/SetupDateTime/: SetupDateTimeApplet.py  SetupDateTimeMeta.py  __init__.py
jive/applets/SetupLanguage/: SetupLanguageApplet.py  SetupLanguageMeta.py  __init__.py
jive/applets/SetupWallpaper/: SetupWallpaperApplet.py  SetupWallpaperMeta.py  __init__.py  strings.txt
jive/applets/SetupWelcome/: SetupWelcomeApplet.py  SetupWelcomeMeta.py  __init__.py
jive/applets/SlimBrowser/: SlimBrowserApplet.py  SlimBrowserMeta.py  __init__.py  db.py  scanner.py  volume.py
jive/applets/SlimDiscovery/: SlimDiscoveryApplet.py  SlimDiscoveryMeta.py  __init__.py
jive/applets/SlimMenus/: SlimMenusApplet.py  SlimMenusMeta.py  __init__.py
jive/applets/WQVGAlargeSkin/: WQVGAlargeSkinApplet.py  WQVGAlargeSkinMeta.py  __init__.py
jive/applets/WQVGAsmallSkin/: WQVGAsmallSkinApplet.py  WQVGAsmallSkinMeta.py  __init__.py
jive/net/: __init__.py  comet.py  comet_request.py  dns.py  http_pool.py  network_thread.py  process.py  request_http.py  request_jsonrpc.py  socket_base.py  socket_http.py  socket_http_queue.py  socket_tcp.py  socket_tcp_server.py  socket_udp.py  wake_on_lan.py
jive/slim/: __init__.py  artwork_cache.py  local_player.py  player.py  slim_server.py
jive/ui/: __init__.py  audio.py  button.py  canvas.py  checkbox.py  choice.py  constants.py  contextmenuwindow.py  event.py  flick.py  font.py  framework.py  group.py  homemenu.py  icon.py  irmenuaccel.py  keyboard.py  label.py  menu.py  numberletteraccel.py  popup.py  radio.py  scrollaccel.py  scrollwheel.py  simplemenu.py  slider.py  snapshotwindow.py  stickymenu.py  style.py  surface.py  task.py  textarea.py  textinput.py  tile.py  timeinput.py  timer.py  widget.py  window.py
jive/utils/: __init__.py  autotable.py  datetime_utils.py  debug.py  dumper.py  jsonfilters.py  locale.py  log.py  string_utils.py  table_utils.py
tests/: conftest.py  test_applet_system.py  test_artwork_cache.py  test_core_applets.py  test_e2e_integration.py  test_input_to_action_map.py  test_net.py  test_slim.py  test_system.py  test_ui.py  test_ui_constants.py  test_ui_event.py  test_ui_scrollwheel.py  test_ui_timer.py  test_utils.py  test_utils_autotable.py  test_utils_datetime.py  test_utils_debug.py  test_utils_dumper.py  test_utils_jsonfilters.py  test_utils_locale.py  test_utils_log.py  test_utils_string.py  test_utils_table.py
