# ──────────────────────────────────────────────────────────────────────────────
# Sordino — JiveLite-compatible Squeezebox controller UI
# ──────────────────────────────────────────────────────────────────────────────

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sordino"
version = "0.5.0"
description = "Sordino — JiveLite-compatible Squeezebox controller UI for Resonance and Lyrion Music Server"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    {name = "Sordino Contributors"},
]
keywords = ["squeezebox", "lms", "lyrion", "resonance", "music", "controller", "pygame", "sordino"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "pygame-ce>=2.5.0",
]

[project.optional-dependencies]
# Use legacy pygame instead of pygame-ce (mutually exclusive — install
# one or the other, not both).
pygame-legacy = ["pygame>=2.5.0"]

# Frozen single-file / single-folder executables (like the original
# jivelite.exe distribution).
freeze = [
    "pyinstaller>=6.0",
]

dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.6.0",
]

[project.scripts]
sordino = "jive.main:main"

[project.urls]
Homepage = "https://github.com/endegelaende/sordino"
Repository = "https://github.com/endegelaende/sordino"
Issues = "https://github.com/endegelaende/sordino/issues"

# ──────────────────────────────────────────────────────────────────────────────
# setuptools — package discovery & data files
# ──────────────────────────────────────────────────────────────────────────────

[tool.setuptools.packages.find]
include = ["jive*"]

[tool.setuptools.package-data]
# Assets that live inside the jive package tree and MUST be included in
# wheels / sdists so that `pip install sordino` works out of the box.
jive = [
    # Wallpaper images
    "applets/SetupWallpaper/wallpaper/*.png",
    # Applet localisation strings
    "applets/*/strings.txt",
    # Bundled share/jive/ assets — the release workflow copies
    # share/jive/ → jive/_data/ before `python -m build` so that
    # skin images, fonts, splash, and strings end up inside the wheel.
    # For editable installs the search-path in system.py finds
    # share/jive/ relative to the project root directly.
    # When _data/ is absent these globs simply match nothing.
    "_data/fonts/*.ttf",
    "_data/jive/*.png",
    "_data/jive/*.txt",
    "_data/applets/*/images/**/*.png",
    "_data/applets/*/images/**/*.jpg",
    "_data/applets/*/images/**/*.bmp",
]

# ──────────────────────────────────────────────────────────────────────────────
# pytest
# ──────────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

# ──────────────────────────────────────────────────────────────────────────────
# mypy
# ──────────────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "pygame.*"
ignore_missing_imports = true

# ──────────────────────────────────────────────────────────────────────────────
# ruff
# ──────────────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["jive"]
